--- a/app.json
+++ b/app.json
@@ -1,28 +1,28 @@
 {
 
-    "name": "Save restricted content bot by @dev_gagan",
-    "description": "Telegram bot to save restricted content.",
+    "name": "Save restricted content",
+    "description": "Telegram bot",
     "logo": "",
     "keywords": [
         "telegram",
         "Save restricted content",
         "bot"
     ],
-    "repository": "https://github.com/devgaganin/save_restricted-content-telegram-bot-repo",
+    "repository": "https://github.com/devgaganin/SUMIT-Save-Restricted-Content-",
     "website": "",
-    "success_url": "https://t.me/dev_gagan",
+    "success_url": "https://t.me/official_satyam01",
     "env": {
             "API_HASH": {
             "description": "Your API HASH from my.telegram.org",
-            "value": ""
+            "value": "f1cc9ff726684360e45bdc612605f30b"
         },
         "API_ID": {
             "description": "Your API ID from my.telegram.org",
-            "value": ""
+            "value": "24454391"
         },
         "BOT_TOKEN": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "6733833024:AAGdWe34B21dZ9-hneLLnvQghBYTrgz1x9w"
         },
         "SESSION": {
             "description": "Pyrogram string session.",
@@ -30,11 +30,11 @@
         },
         "AUTH": {
             "description": "User ID of Bot owner.",
-            "value": ""
+            "value": "5330239547"
         },
         "FORCESUB": {
             "description": "Username name of public channel without using '@'.",
-            "value": ""
+            "value": "official_satyam01"
         }
     },
     "stack": "container"
